# my-first-cicd

./: CMakeLists.txt  README.md  conanfile.txt  index.html
.github/workflows/: ci.yml  cpp-ci.yml
tests/: test_sum.cpp
